--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
         </activity>
         <activity android:name=".activity.ShowDataActivity">
         </activity>
+        <activity android:name=".activity.StartForResultActivity">
+        </activity>
+        <activity android:name=".activity.InputUserInfoActivity">
+        </activity>
     </application>
 
 </manifest>
