--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,9 @@
         </activity>
         <activity android:name=".activity.InputUserInfoActivity">
         </activity>
+        <activity
+            android:name=".activity.OrientationActivity">
+        </activity>
     </application>
 
 </manifest>
